Fix spacing for images

--- a/imports/ui/styling/stylesheets/objects/_media.scss
+++ b/imports/ui/styling/stylesheets/objects/_media.scss
@@ -19,13 +19,17 @@ img {
 // ==========================================================================
 
 .text--styled {
+  p:last-child {
+    img:last-child { margin-bottom: 0; }
+  }
+  
   img {
     width: auto;
     max-width: 100%;
     max-height: 100%;
+    margin-top: var(--spacing--wysiwyg);
+    margin-bottom: var(--spacing--wysiwyg);
     border-radius: var(--border-radius--content);
     @include container;
-
-    &:not(:last-child) { margin-bottom: var(--spacing--wysiwyg); }
   }
 }
